# pdns-mcp

./: .gitignore  config.example.toml  pdns-mcp.service  pyproject.toml
src/pdns_mcp/: __init__.py  audit.py  config.py  metadata_validators.py  models.py  pdns_client.py  preview.py  server.py  validators.py
tests/: test_auth.py  test_catalog.py  test_metadata.py  test_preview.py  test_validators.py
