[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdns-mcp"
version = "0.1.0"
description = "PowerDNS MCP Server — safe, validated DNS management for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6",
    "httpx>=0.27",
    "pydantic>=2.6",
    "structlog>=24.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov",
]

[project.scripts]
pdns-mcp = "pdns_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdns_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
